--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+
+    overflow-x: hidden;
+}
+
 section {
 
     padding: 3.9rem 0;
@@ -180,6 +185,9 @@ header {
     font-weight: 100;
     line-height: .4;
     letter-spacing: 2px;
+    opacity: 0;
+    animation: fadeUp .5s forwards;
+    animation-delay: .5s;
 
 }
 
@@ -198,7 +206,9 @@ header {
     font-weight: 900;
     letter-spacing: .5rem;
     margin-right: -.5rem;
-    margin-top: 1rem;
+    margin-top: 1rem; 
+    animation: scale .5s forwards;
+  
  }
 
  .separator {
@@ -214,6 +224,9 @@ header {
     height: .25rem;
     background-color: #fff;
     position: relative;
+    opacity: 0;
+    animation: grow 2s forwards;
+    animation-delay: .9s;
  }
 
  .line-right::before, .line-left::before  {
@@ -223,6 +236,9 @@ header {
     top: 50%;
     transform: translatey(-50%);
     border: .6rem solid transparent;
+    opacity: 0;
+    animation: grow .5s forwards;
+    animation-delay: 1.2s;
 
  }
 
@@ -247,6 +263,12 @@ header {
      color: var(--secondary-font-color);
      margin: 0 1.6rem;
 
+ }
+
+ .single-animation {
+     opacity: 0;
+     animation: fadeDown .5s forwards;
+     animation-delay: 1.5s;
  }
 
 
@@ -399,7 +421,7 @@ header {
  /*The perfect blend */
 
  .perfect-blend {
-     background: url(imagens/perfect-blend.jpg) center no repeat;
+     background: url(imagens/perfect-blend.jpg) center no-repeat;
      background-size: cover;
 
  }
@@ -426,6 +448,7 @@ header {
      transform: translateX(-50%);
      border-radius: 50%;
 
+
     }
 
     .back-to-top i {
@@ -434,11 +457,12 @@ header {
         color:#fff;
         font-size: 2rem;
         padding: 2rem;
+        animation: up 2s infinite;
 
     }
 
     .footer-content {
-       /* overflow: hidden;*/
+        overflow: hidden;
 
          
     }
@@ -656,11 +680,98 @@ header {
             margin-left: 16rem;
         }
 
-     
-  
-
 
      }
+
+       /* Animations */
+
+       @keyframes fadeUp {
+          
+        0%  {
+               
+            transform: translatey(4rem);
+       }
+
+       100% {
+
+        opacity: 1 ;
+        transform: translatey(0);
+
+       }
+
+    }
+
+    @keyframes scale {
+          
+        0%  {
+               
+            transform: scale(2);
+       }
+
+       100% {
+
+        opacity: 1 ;
+        transform: scale(1);
+
+       }
+    }
+
+    @keyframes grow {
+          
+        0%  {
+               
+            width:0;
+       }
+
+       100% {
+
+        opacity: 1 ;
+        width: 100%;
+
+       }
+    }
+
+    @keyframes fadeDown {
+          
+        0%  {
+               
+            transform: translatey(-1rem);
+       }
+
+       100% {
+
+        opacity: 1 ;
+        transform: translatey(0);
+
+       }
+
+    }
+
+    @keyframes up {
+          
+        0%  {  
+            opacity: 0 ;
+       }
+
+       50% {
+            opacity: 1 ;
+
+
+       }
+
+       100% {
+
+        opacity: 0;
+        transform: translatey(-1rem);
+
+       }
+
+    }
+
+       
+
+
+
 
 
 
