--- a/styles.css
+++ b/styles.css
@@ -383,9 +383,9 @@ header {
  }
 
  .back-to-top{
-     width: 7rem;
-     height: 7rem;
-     background-color: #121212;
+     width: 6rem;
+     height: 6rem;
+     background-color: #D03232;
      position: absolute;
      top:-3rem;
      left: 50%;
