--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,8 @@ header {
 }
 
 .nav-list {
-    list-style: none; 
+    list-style: none;
+    font-size: 4em; 
     position:fixed;
     top: 0;
     left: 0;
